Make XUL windows use light theme by default This breaks the appearance of sidebars and probably some other things, but it's not a priority right now. Me or some other team member can fix it when managing UI code.

--- a/toolkit/themes/shared/global-shared.css
+++ b/toolkit/themes/shared/global-shared.css
@@ -132,6 +132,10 @@
   --panel-padding: var(--arrowpanel-padding);
 }
 
+xul|window {
+  color-scheme: light;
+}
+
 /* Lightweight theme roots */
 
 :root[lwtheme] {
